--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,4 +1,4 @@
-<h1 style="margin-top: 20px;">{{title}}</h1>
+<h1 class="main-heading">{{title}}</h1>
 
 <form action="/" method="POST">
   <label for="name">Name</label>
